--- a/frontend/src/app/adminlogin/adminlogin.component.html
+++ b/frontend/src/app/adminlogin/adminlogin.component.html
@@ -8,12 +8,12 @@
             <h3 class="mb-5">Sign in</h3>
 
             <div class="form-outline mb-4">
-              <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
-              <label class="form-label" for="typeEmailX-2">Email</label>
+              <input type="number" [(ngModel)]="loginObj.mobileNumber" id="typeEmailX-2" class="form-control form-control-lg" />
+              <label class="form-label" for="typeEmailX-2">Mobile</label>
             </div>
 
             <div class="form-outline mb-4">
-              <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
+              <input type="password" [(ngModel)]="loginObj.password"id="typePasswordX-2" class="form-control form-control-lg" />
               <label class="form-label" for="typePasswordX-2">Password</label>
             </div>
 
@@ -23,7 +23,7 @@
               <label class="form-check-label" for="form1Example3"> Remember password </label>
             </div>
 
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+            <button (click)="login()" class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
 
             <hr class="my-4">
 
