--- a/frontend/src/app/adminlogin/dashboard/dashboard.component.html
+++ b/frontend/src/app/adminlogin/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
-<p>
-  dashboard works!
-</p>
+<div>
+  <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+    <mat-icon>add</mat-icon>
+  </button>
+</div>
