search with key

--- a/frontend/src/app/adminlogin/dashboard/dashboard.component.html
+++ b/frontend/src/app/adminlogin/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
 <div>
+  <div *ngFor="let product of productList">
+    <span>{{product.price}}</span>
+  </div>
   <button (click)="openDialog()" mat-fab color="primary" aria-label="Example icon button with a delete icon">
     <mat-icon>add</mat-icon>
   </button>
